--- a/configs/sst_desktop_applications-unwanted.yaml
+++ b/configs/sst_desktop_applications-unwanted.yaml
@@ -25,6 +25,7 @@ data:
   # Old or deprecated or unwanted or unused stuff
   - rarian
   - GConf2
+  - gnome-online-miners
   # Only Qt5 will be part of RHEL 9
   - qt
   - PyQt4
